menu color and mobile-menu-nav id

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <div id="mobile-menu">
-      <nav>
+      <nav id="mobile-menu-nav">
         <img id="menu-close" src="assets/images/icon-menu-close.svg" alt="" />
         <ul>
           <li>Home</li>
